add: different device experience

--- a/pages/slip.html
+++ b/pages/slip.html
@@ -8,6 +8,14 @@
     <title>Plancovary</title>
 </head>
 <body>
+    <div class="object">
+        <div class="text">
+            <p>接下來幾道問題（一段旅程）</p>
+            <p>我們將幫助你找到變化的方向</p>
+            <p>為接下來的共鳴做好準備</p>
+            <p>請再次點擊開始測驗</p>
+        </div>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../js/slip.js"></script>
