--- a/pages/start.html
+++ b/pages/start.html
@@ -12,7 +12,8 @@
         <img id="plancovary" src="../assets/Start/plancovary.png" alt="plancovary">
     </div>
     <div class="welcome">
-        <img id="welcome" src="../assets/Start/welcome.png" alt="welcome">
+        <p id="upText">包柏001號，歡迎來到共變計畫，</p>
+        <p>這是一場蛻變的起點......</p>
     </div>
     <div class="welcome">
         <img 
