--- a/pages/1-1.html
+++ b/pages/1-1.html
@@ -13,16 +13,20 @@
         <p class="text" id="bottomText">假使你擁有無限的創造力，你首先想創造的是......</p>
     </div>
     <div class="options">
+      <a href="" class="left">
         <img 
           id="left" 
           src="../assets/Creation/leftBefore.png" 
           alt="選項一"
         >
+      </a>
+      <a href="" class="right">
         <img 
           id="right" 
           src="../assets/Creation/rightBefore.png" 
           alt="選項二"
         >
+      </a>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
