--- a/pages/2-1.html
+++ b/pages/2-1.html
@@ -13,16 +13,20 @@
         <p class="text" id="bottomText">顏色產生了變化，你覺得會變成什麼顏色呢</p>
     </div>
     <div class="options">
+      <a href="" class="left">
         <img 
           id="left" 
           src="../assets/Color/leftBefore.png" 
           alt="選項一"
         >
+      </a>
+      <a href="" class="right">
         <img 
           id="right" 
           src="../assets/Color/rightBefore.png" 
           alt="選項二"
         >
+      </a>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
