--- a/pages/2-2.html
+++ b/pages/2-2.html
@@ -13,16 +13,20 @@
         <p class="text" id="bottomText">被傳送到了某個空間......</p>
     </div>
     <div class="options">
+      <a href="" class="left">
         <img 
           id="left" 
           src="../assets/Space/leftBefore.png" 
           alt="選項一"
         >
+      </a>
+      <a href="" class="right">
         <img 
           id="right" 
           src="../assets/Space/rightBefore.png" 
           alt="選項二"
         >
+      </a>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
