add: different device experience

--- a/pages/3-1.html
+++ b/pages/3-1.html
@@ -13,16 +13,20 @@
       <p class="text" id="bottomText">你覺得是什麼呢</p>
     </div>
     <div class="options">
-      <img 
-        id="left" 
-        src="../assets/SoundOne/leftBefore.png" 
-        alt="選項一"
-      >
-      <img 
-        id="right" 
-        src="../assets/SoundOne/rightBefore.png" 
-        alt="選項二"
-      >
+      <a href="" class="left">
+        <img 
+          id="left" 
+          src="../assets/SoundOne/leftBefore.png" 
+          alt="選項一"
+        >
+      </a>
+      <a href="" class="right">
+        <img 
+          id="right" 
+          src="../assets/SoundOne/rightBefore.png" 
+          alt="選項二"
+        >
+      </a>
     </div>
       
     <audio id="soundOne" src="../assets/SoundOne/left.mp3">
