--- a/pages/3-3.html
+++ b/pages/3-3.html
@@ -12,29 +12,37 @@
         <p class="text" id="upText">____&emsp;在這座森林中，忽然閃過了一個東西......</p>
         <p class="text" id="bottomText">你覺得是什麼呢</p>
     </div>
-    <div class="options" id="topOptions">
+    <div class="options">
+      <a href="" class="topLeft">
         <img 
-          class="left" 
+          id="topLeft" 
           src="../assets/Forest/optionOneBefore.png" 
           alt="選項一"
         >
+      </a>
+      <a href="" class="topRight">
         <img 
-          class="right" 
+          id="topRight" 
           src="../assets/Forest/optionTwoBefore.png" 
           alt="選項二"
         >
+      </a>
     </div>
-    <div class="options" id="bottomOptions">
+    <div class="options">
+      <a href="" class="bottomLeft">
         <img 
-          class="left" 
+          id="bottomLeft" 
           src="../assets/Forest/optionThreeBefore.png" 
           alt="選項三"
         >
+      </a>
+      <a href="" class="bottomRight">
         <img 
-          class="right" 
+          id="bottomRight" 
           src="../assets/Forest/optionFourBefore.png" 
           alt="選項四"
         >
+      </a>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
