--- a/pages/3-4.html
+++ b/pages/3-4.html
@@ -13,16 +13,20 @@
         <p class="text" id="bottomText">這會是什麼樣的工廠呢</p>
     </div>
     <div class="options">
+      <a href="" class="left">
         <img 
           id="left" 
           src="../assets/Factory/optionOneBefore.png" 
           alt="選項一"
         >
+      </a>
+      <a href="" class="right">
         <img 
           id="right" 
           src="../assets/Factory/optionTwoBefore.png" 
           alt="選項二"
         >
+      </a>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
