--- a/pages/3-2.html
+++ b/pages/3-2.html
@@ -13,16 +13,20 @@
         <p class="text" id="bottomText">你覺得是什麼呢</p>
     </div>
     <div class="options">
+      <a href="" class="left">
         <img 
           id="left" 
           src="../assets/SoundTwo/leftBefore.png" 
           alt="選項一"
         >
+      </a>
+      <a href="" class="right">
         <img 
           id="right" 
           src="../assets/SoundTwo/rightBefore.png" 
           alt="選項二"
         >
+      </a>
     </div>
 
     <audio id="soundOne" src="../assets/SoundTwo/left.wav">
