--- a/pages/4-1.html
+++ b/pages/4-1.html
@@ -9,20 +9,24 @@
 </head>
 <body>
     <div class="textContainer">
-        <p class="text" id="upText">____&emsp;突然在這個空間突然在這個空間裡有一個不知名之物乎閃而過，</p>
+        <p class="text" id="upText">____&emsp;突然在這個空間裡有一個不知名之物乎閃而過，</p>
         <p class="text" id="bottomText">你覺得是什麼呢</p>
     </div>
     <div class="options">
+      <a href="" class="left">
         <img 
           id="left" 
           src="../assets/SoundThree/leftBefore.png" 
           alt="選項一"
         >
+      </a>
+      <a href="" class="right">
         <img 
           id="right" 
           src="../assets/SoundThree/rightBefore.png" 
           alt="選項二"
         >
+      </a>
     </div>
 
     <audio id="soundOne" src="../assets/SoundThree/left.wav">
