add: background music & change gif image

--- a/pages/3-1.html
+++ b/pages/3-1.html
@@ -28,7 +28,10 @@
         >
       </a>
     </div>
-      
+    
+    <audio id="music" src="../assets/background.wav" autoplay>
+      你的瀏覽器不支援audio標籤
+    </audio>
     <audio id="soundOne" src="../assets/SoundOne/left.mp3">
       你的瀏覽器不支援audio標籤
     </audio>
