--- a/pages/4-2.html
+++ b/pages/4-2.html
@@ -29,6 +29,9 @@
       </a>
     </div>
 
+    <audio id="music" src="../assets/background.wav" autoplay>
+      你的瀏覽器不支援audio標籤
+    </audio>
     <audio id="soundOne" src="../assets/SoundFour/left.wav">
       你的瀏覽器不支援audio標籤
     </audio>
