--- a/pages/widsom.html
+++ b/pages/widsom.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/widsom.css">
+    <link rel="stylesheet icon" href="../css/widsom.css">
     <title>Plancovary</title>
 </head>
 <body>
     <button>
         <a href="./start.html">回首頁</a>
     </button>
+
+    <audio id="music" src="../assets/background.wav" autoplay>
+        你的瀏覽器不支援audio標籤
+    </audio>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../js/widsom.js"></script>
 </body>
