--- a/pages/2-2.html
+++ b/pages/2-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/2-2.css">
+    <link rel="stylesheet icon" href="../css/2-2.css">
     <title>Plancovary</title>
 </head>
 <body>
@@ -28,6 +28,10 @@
         >
       </a>
     </div>
+
+    <audio id="music" src="../assets/background.wav" autoplay>
+      你的瀏覽器不支援audio標籤
+    </audio>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../js/2-2.js"></script>
