--- a/pages/3-3_slip.html
+++ b/pages/3-3_slip.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/3-3.css">
+    <link rel="stylesheet icon" href="../css/3-3.css">
     <title>Plancovary</title>
 </head>
 <body id="slip">
+    <audio id="music" src="../assets/background.wav" autoplay>
+        你的瀏覽器不支援audio標籤
+    </audio>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../js/3-3.js"></script>
