--- a/pages/end.html
+++ b/pages/end.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/end.css">
+    <link rel="stylesheet icon" href="../css/end.css">
     <title>Plancovary</title>
 </head>
 <body>
@@ -14,6 +14,10 @@
             <p>你找到成為亞利思的關鍵</p>
         </div>
     </div>
+
+    <audio id="music" src="../assets/background.wav" autoplay>
+        你的瀏覽器不支援audio標籤
+    </audio>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../js/end.js"></script>
