--- a/pages/start.html
+++ b/pages/start.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet icon" href="../css/start.css">
+    <link rel="stylesheet" href="../css/start.css">
     <title>Plancovary</title>
 </head>
 <body>
@@ -22,10 +22,6 @@
           alt="start"
         >
     </div>
-
-    <audio id="music" src="../assets/background.wav">
-        你的瀏覽器不支援audio標籤
-      </audio>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../js/start.js"></script>
