--- a/pages/2-1.html
+++ b/pages/2-1.html
@@ -8,32 +8,32 @@
     <title>Plancovary</title>
 </head>
 <body>
-    <div class="textContainer">
-        <p class="text" id="upText">____&emsp;在經過你與亞利斯不經意的觸碰後，</p>
-        <p class="text" id="bottomText">顏色產生了變化，你覺得會變成什麼顏色呢</p>
-    </div>
-    <div class="options">
-      <a href="" class="left">
-        <img 
-          id="left" 
-          src="../assets/Color/leftBefore.png" 
-          alt="選項一"
-        >
-      </a>
-      <a href="" class="right">
-        <img 
-          id="right" 
-          src="../assets/Color/rightBefore.png" 
-          alt="選項二"
-        >
-      </a>
-    </div>
+  <div class="textContainer">
+    <p id="upText">在經過你與亞利斯不經意的觸碰後，</p>
+    <p id="bottomText">顏色產生了變化，你覺得會變成什麼顏色呢</p>
+  </div>
+  <div class="options">
+    <a href="" class="left">
+      <img 
+        id="left" 
+        src="../assets/Color/left.png" 
+        alt="選項一"
+      >
+    </a>
+    <a href="" class="right">
+      <img 
+        id="right" 
+        src="../assets/Color/right.png" 
+        alt="選項二"
+      >
+    </a>
+  </div>
 
-    <audio id="music" src="../assets/background.wav" autoplay>
-      你的瀏覽器不支援audio標籤
-    </audio>
+  <audio id="music" src="../assets/background.wav" autoplay>
+    你的瀏覽器不支援audio標籤
+  </audio>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="../js/2-1.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="../js/2-1.js"></script>
 </body>
 </html>
