--- a/pages/3-3.html
+++ b/pages/3-3.html
@@ -8,48 +8,48 @@
     <title>Plancovary</title>
 </head>
 <body id="question">
-    <div class="textContainer">
-        <p class="text" id="upText">____&emsp;在這座森林中，忽然閃過了一個東西......</p>
-        <p class="text" id="bottomText">你覺得是什麼呢</p>
-    </div>
-    <div class="options">
-      <a href="" class="topLeft">
-        <img 
-          id="topLeft" 
-          src="../assets/Forest/optionOneBefore.png" 
-          alt="選項一"
-        >
-      </a>
-      <a href="" class="topRight">
-        <img 
-          id="topRight" 
-          src="../assets/Forest/optionTwoBefore.png" 
-          alt="選項二"
-        >
-      </a>
-    </div>
-    <div class="options">
-      <a href="" class="bottomLeft">
-        <img 
-          id="bottomLeft" 
-          src="../assets/Forest/optionThreeBefore.png" 
-          alt="選項三"
-        >
-      </a>
-      <a href="" class="bottomRight">
-        <img 
-          id="bottomRight" 
-          src="../assets/Forest/optionFourBefore.png" 
-          alt="選項四"
-        >
-      </a>
-    </div>
+  <div class="textContainer">
+    <p id="upText">在這座森林中，閃著微弱光芒......</p>
+    <p id="bottomText">你覺得是什麼呢</p>
+  </div>
+  <div class="options">
+    <a href="" class="topLeft">
+      <img 
+        id="topLeft" 
+        src="../assets/Forest/optionOne.png" 
+        alt="選項一"
+      >
+    </a>
+    <a href="" class="topRight">
+      <img 
+        id="topRight" 
+        src="../assets/Forest/optionTwo.png" 
+        alt="選項二"
+      >
+    </a>
+  </div>
+  <div class="options">
+    <a href="" class="bottomLeft">
+      <img 
+        id="bottomLeft" 
+        src="../assets/Forest/optionThree.png" 
+        alt="選項三"
+      >
+    </a>
+    <a href="" class="bottomRight">
+      <img 
+        id="bottomRight" 
+        src="../assets/Forest/optionFour.png" 
+        alt="選項四"
+      >
+    </a>
+  </div>
 
-    <audio id="music" src="../assets/background.wav" autoplay>
-      你的瀏覽器不支援audio標籤
-    </audio>
+  <audio id="music" src="../assets/background.wav" autoplay>
+    你的瀏覽器不支援audio標籤
+  </audio>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="../js/3-3.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="../js/3-3.js"></script>
 </body>
 </html>
