--- a/pages/3-4.html
+++ b/pages/3-4.html
@@ -8,32 +8,34 @@
     <title>Plancovary</title>
 </head>
 <body>
-    <div class="textContainer">
-        <p class="text" id="upText">____&emsp;來到了一間未知的工廠，</p>
-        <p class="text" id="bottomText">這會是什麼樣的工廠呢</p>
+  <div class="textContainer">
+    <div class="wrapper">
+      <p id="upText">被傳送到了一間未知的工廠，</p>
+      <p id="bottomText">這會是什麼樣的工廠呢</p>
     </div>
-    <div class="options">
-      <a href="" class="left">
-        <img 
-          id="left" 
-          src="../assets/Factory/optionOneBefore.png" 
-          alt="選項一"
-        >
-      </a>
-      <a href="" class="right">
-        <img 
-          id="right" 
-          src="../assets/Factory/optionTwoBefore.png" 
-          alt="選項二"
-        >
-      </a>
-    </div>
+  </div>
+  <div class="options">
+    <a href="" class="left">
+      <img 
+        id="left" 
+        src="../assets/Factory/optionOne.png" 
+        alt="選項一"
+      >
+    </a>
+    <a href="" class="right">
+      <img 
+        id="right" 
+        src="../assets/Factory/optionTwo.png" 
+        alt="選項二"
+      >
+    </a>
+  </div>
 
-    <audio id="music" src="../assets/background.wav" autoplay>
-      你的瀏覽器不支援audio標籤
-    </audio>
+  <audio id="music" src="../assets/background.wav" autoplay>
+    你的瀏覽器不支援audio標籤
+  </audio>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="../js/3-4.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="../js/3-4.js"></script>
 </body>
 </html>
