--- a/pages/slip.html
+++ b/pages/slip.html
@@ -10,10 +10,11 @@
 <body>
     <div class="object">
         <div class="text">
-            <p>接下來幾道問題（一段旅程）</p>
-            <p>我們將幫助你找到變化的方向</p>
-            <p>為接下來的共鳴做好準備</p>
-            <p>請再次點擊開始測驗</p>
+            <p class="upText" id="upText">接下來幾道問題(一段旅程)，</p>
+            <p class="upText">我們將幫助你找到變化的方向，</p>
+            <p class="bottomText">為接下來的共鳴做好準備。</p>
+            <br>
+            <p>//請再次點擊開始測驗//</p>
         </div>
     </div>
 
