--- a/pages/1-1.html
+++ b/pages/1-1.html
@@ -8,32 +8,32 @@
     <title>Plancovary</title>
 </head>
 <body>
-    <div class="textContainer">
-        <p class="text" id="upText">____&emsp;嗨，包柏！</p>
-        <p class="text" id="bottomText">假使你擁有無限的創造力，你首先想創造的是......</p>
-    </div>
-    <div class="options">
-      <a href="" class="left">
-        <img 
-          id="left" 
-          src="../assets/Creation/leftBefore.png" 
-          alt="選項一"
-        >
-      </a>
-      <a href="" class="right">
-        <img 
-          id="right" 
-          src="../assets/Creation/rightBefore.png" 
-          alt="選項二"
-        >
-      </a>
-    </div>
+  <div class="textContainer">
+    <p id="upText">嗨，包柏！</p>
+    <p id="bottomText">假使你擁有無限的創造力，你首先想創造的是......</p>
+  </div>
+  <div class="options">
+    <a href="" class="left">
+      <img 
+        id="left" 
+        src="../assets/Creation/leftBefore.png" 
+        alt="選項一"
+      >
+    </a>
+    <a href="" class="right">
+      <img 
+        id="right" 
+        src="../assets/Creation/rightBefore.png" 
+        alt="選項二"
+      >
+    </a>
+  </div>
 
-    <audio id="music" src="../assets/background.wav" autoplay>
-      你的瀏覽器不支援audio標籤
-    </audio>
+  <audio id="music" src="../assets/background.wav" autoplay>
+    你的瀏覽器不支援audio標籤
+  </audio>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="../js/1-1.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="../js/1-1.js"></script>
 </body>
 </html>
