--- a/pages/3-1.html
+++ b/pages/3-1.html
@@ -8,38 +8,38 @@
     <title>Plancovary</title>
 </head>
 <body>
-    <div class="textContainer">
-      <p class="text" id="upText">____&emsp;突然在這個空間裡有一個不知名之物忽閃而過，</p>
-      <p class="text" id="bottomText">你覺得是什麼呢</p>
-    </div>
-    <div class="options">
-      <a href="" class="left">
-        <img 
-          id="left" 
-          src="../assets/SoundOne/leftBefore.png" 
-          alt="選項一"
-        >
-      </a>
-      <a href="" class="right">
-        <img 
-          id="right" 
-          src="../assets/SoundOne/rightBefore.png" 
-          alt="選項二"
-        >
-      </a>
-    </div>
-    
-    <audio id="music" src="../assets/background.wav" autoplay>
-      你的瀏覽器不支援audio標籤
-    </audio>
-    <audio id="soundOne" src="../assets/SoundOne/left.mp3">
-      你的瀏覽器不支援audio標籤
-    </audio>
-    <audio id="soundTwo" src="../assets/SoundOne/right.mp3">
-      你的瀏覽器不支援audio標籤
-    </audio>
+  <div class="textContainer">
+    <p id="upText">突然在這個空間裡有一個不知名之物忽閃而過，</p>
+    <p id="bottomText">你覺得是什麼呢</p>
+  </div>
+  <div class="options">
+    <a href="" class="left">
+      <img 
+        id="left" 
+        src="../assets/SoundOne/leftBefore.png" 
+        alt="選項一"
+      >
+    </a>
+    <a href="" class="right">
+      <img 
+        id="right" 
+        src="../assets/SoundOne/rightBefore.png" 
+        alt="選項二"
+      >
+    </a>
+  </div>
+  
+  <audio id="music" src="../assets/background.wav" autoplay>
+    你的瀏覽器不支援audio標籤
+  </audio>
+  <audio id="soundOne" src="../assets/SoundOne/left.mp3">
+    你的瀏覽器不支援audio標籤
+  </audio>
+  <audio id="soundTwo" src="../assets/SoundOne/right.mp3">
+    你的瀏覽器不支援audio標籤
+  </audio>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="../js/3-1.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="../js/3-1.js"></script>
 </body>
 </html>
