modify: RWD with i6/7/8 plus

--- a/pages/1-1.html
+++ b/pages/1-1.html
@@ -10,7 +10,8 @@
 <body>
   <div class="textContainer">
     <p id="upText">嗨，包柏！</p>
-    <p id="bottomText">假使你擁有無限的創造力，你首先想創造的是......</p>
+    <p id="middleText">假使你擁有無限的創造力，</p>
+    <p id="bottomText">你首先想創造的是......</p>
   </div>
   <div class="options">
     <a href="" class="left">
