--- a/pages/2-1.html
+++ b/pages/2-1.html
@@ -9,8 +9,13 @@
 </head>
 <body>
   <div class="textContainer">
-    <p id="upText">在經過你與亞利斯不經意的觸碰後，</p>
-    <p id="bottomText">顏色產生了變化，你覺得會變成什麼顏色呢</p>
+    <p id="upText">在經過你與亞利思</p>
+    <br id="brOne">
+    <p id="middleTextOne">不經意的觸碰後，</p>
+    <br id="brTwo">
+    <p id="middleTextTwo">顏色產生了變化，</p>
+    <br id="brThree">
+    <p id="bottomText">你覺得會變成什麼顏色呢</p>
   </div>
   <div class="options">
     <a href="" class="left">
