--- a/pages/2-2.html
+++ b/pages/2-2.html
@@ -9,7 +9,10 @@
 </head>
 <body>
   <div class="textContainer">
-    <p id="upText">在經過你與亞利斯不經意的觸碰後，</p>
+    <p id="upText">在經過你與亞利思</p>
+    <br id="brOne">
+    <p id="middleText">不經意的觸碰後，</p>
+    <br id="brTwo">
     <p id="bottomText">被傳送到了某個空間......</p>
   </div>
   <div class="options">
