--- a/pages/3-1.html
+++ b/pages/3-1.html
@@ -9,7 +9,10 @@
 </head>
 <body>
   <div class="textContainer">
-    <p id="upText">突然在這個空間裡有一個不知名之物忽閃而過，</p>
+    <p id="upText">突然在這個空間裡</p>
+    <br id="brOne">
+    <p id="middleText">有一個不知名之物忽閃而過，</p>
+    <br id="brTwo">
     <p id="bottomText">你覺得是什麼呢</p>
   </div>
   <div class="options">
