--- a/pages/4-1.html
+++ b/pages/4-1.html
@@ -9,21 +9,26 @@
 </head>
 <body>
   <div class="textContainer">
-      <p id="upText">走進工廠，工廠的入口放著一台收音機，</p>
-      <p id="bottomText">按下播放，你覺得是什麼聲音呢</p>
+    <p id="upText">走進工廠，工廠的入口</p>
+    <br id="brOne">
+    <p id="middleTextOne">放著一台收音機，</p>
+    <br id="brTwo">
+    <p id="middleTextTwo">按下播放，</p>
+    <br id="brThree">
+    <p id="bottomText">你覺得是什麼聲音呢</p>
   </div>
   <div class="options">
     <a href="" class="left">
       <img 
         id="left" 
-        src="../assets/SoundThree/leftBefore.png" 
+        src="../assets/SoundThree/before.png" 
         alt="選項一"
       >
     </a>
     <a href="" class="right">
       <img 
         id="right" 
-        src="../assets/SoundThree/rightBefore.png" 
+        src="../assets/SoundThree/before.png" 
         alt="選項二"
       >
     </a>
