--- a/pages/end.html
+++ b/pages/end.html
@@ -10,8 +10,8 @@
 <body>
     <div class="object">
         <div class="text">
-            <p>恭喜你包柏 -</p>
-            <p>你找到成為雅莉絲的關鍵</p>
+            <p>恭喜你包柏—</p>
+            <p>你找到成為亞利思的關鍵</p>
         </div>
     </div>
 
