--- a/pages/start.html
+++ b/pages/start.html
@@ -13,7 +13,7 @@
     </div>
     <div class="welcome">
         <p id="upText">包柏001號，歡迎來到共變計畫，</p>
-        <p>這是一場蛻變的起點......</p>
+        <p id="bottomText">這是一場蛻變的起點......</p>
     </div>
     <div class="welcome">
         <img 
