--- a/pages/3-3.html
+++ b/pages/3-3.html
@@ -9,8 +9,11 @@
 </head>
 <body id="question">
   <div class="textContainer">
-    <p id="upText">在這座森林中，閃著微弱光芒......</p>
+    <div class="wrapper">
+    <p id="upText">在這座森林中，</p>
+    <p id="middleText">閃著微弱光芒......</p>
     <p id="bottomText">你覺得是什麼呢</p>
+    </div>
   </div>
   <div class="options">
     <a href="" class="topLeft">
