--- a/pages/1-1.html
+++ b/pages/1-1.html
@@ -17,14 +17,14 @@
     <a href="" class="left">
       <img 
         id="left" 
-        src="../assets/Creation/leftBefore.png" 
+        src="../assets/Creation/left.png" 
         alt="選項一"
       >
     </a>
     <a href="" class="right">
       <img 
         id="right" 
-        src="../assets/Creation/rightBefore.png" 
+        src="../assets/Creation/right.png" 
         alt="選項二"
       >
     </a>
