--- a/pages/history.html
+++ b/pages/history.html
@@ -8,6 +8,8 @@
     <title>Plancovary</title>
 </head>
 <body>
+    <div class="wrapper">
+    </div>
     <audio id="music" src="../assets/background.wav" autoplay>
         你的瀏覽器不支援audio標籤
     </audio>
