modify: history RWD

--- a/pages/history.html
+++ b/pages/history.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <div class="wrapper">
+        <div class="content">
+            <img id="text" src="../assets/History/result.png" alt="繫光亞利思">
+            <button id="seeMore">看更多 > ></button>
+        </div>
     </div>
     <audio id="music" src="../assets/background.wav" autoplay>
         你的瀏覽器不支援audio標籤
