add audio in start page

--- a/pages/start.html
+++ b/pages/start.html
@@ -24,6 +24,10 @@
         >
     </div>
 
+    <audio id="music" src="../assets/background.wav" autoplay playsinline="">
+        你的瀏覽器不支援audio標籤
+    </audio>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../js/start.js"></script>
 </body>
