fix audio issue

--- a/pages/start.html
+++ b/pages/start.html
@@ -24,7 +24,7 @@
         >
     </div>
 
-    <audio id="music" src="../assets/background.wav" autoplay playsinline="">
+    <audio id="music" src="../assets/background.wav" autoplay>
         你的瀏覽器不支援audio標籤
     </audio>
 
