--- a/pages/history.html
+++ b/pages/history.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div class="wrapper">
+        <a href="" class="more">
+            <img id="more" src="../assets/Widsom/moreBefore.png">
+        </a>
     </div>
     <audio id="music" src="../assets/background.wav" autoplay>
         你的瀏覽器不支援audio標籤
